fixed visibility of back-to-top button

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ header #search_button {
 }
 
 #back-to-top {
-  display: none;
+  visibility: hidden;
   float: right;
   margin-bottom: 20px;
   margin-right: 20px;
